# CS372_Battleship

./: CMakeLists.txt  Erin'sCS372Diary.txt  IanCS372Diary.rtf  README.md  battleship.h  board.cpp  board.h  carrier.h  destroyer.h  frigate.h  main.cpp  player.cpp  player.h  ship.cpp  ship.h  submarine.h  testBattleShip.cpp
battleship/battleship/: main.cpp
battleship/battleship.xcodeproj/: project.pbxproj
battleship/battleship.xcodeproj/project.xcworkspace/xcuserdata/erintolman.xcuserdatad/: UserInterfaceState.xcuserstate
